--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@ My recent research focuses on exploring and practicing the connections between d
 
 <tr>
 <td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px">
-<font size="3" style="line-height:110%;background-color:transparent">I completed my PhD in macine learning at Duke University, advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font>
+<font size="3" style="line-height:110%;background-color:transparent">I completed my PhD in machine learning at Duke University, advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font>
 <font size="3"><span style="line-height:19.2px">. My PhD research studied the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
---- enriching one with each other: (1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
+--- enriching one with each other: (1) Bayesian Deep Learning: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) Deep Bayesian Learning: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning.
 </span></font>
 
 </td>
@@ -759,6 +759,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">Oscar: Object-Semantics Aligned Pre-training for Vision-Language Tasks
 	[<a href="https://arxiv.org/abs/2004.06165" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/microsoft/Oscar" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="nofollow">Blog</a>]
 	<br>Xiujun Li, Xi Yin, Chunyuan Li, Pengchuan Zhang, Xiaowei Hu, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	Objects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
