demo optimus added

--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">Optimus: Organizing Sentences via Pre-trained Modeling of a Latent Space
 	[<a href="http://chunyuan.li/papers/Optimus_2020.pdf" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/Optimus" target="_blank" rel="nofollow">Code</a>]
+	[<a href="http://40.71.23.172:8899/" target="_blank" rel="nofollow">Demo</a>]
 	<br>Chunyuan Li, Xiang Gao, Yuan Li, Xiujun Li, Baolin Peng, Yizhe Zhang, Jianfeng Gao</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
