--- a/index.html
+++ b/index.html
@@ -707,6 +707,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">Feature Quantization Improves GAN Training
 	[<a href="https://arxiv.org/abs/2004.02088" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/YangNaruto/FQ-GAN" target="_blank" rel="nofollow">Code</a>]
+	[<a href="http://40.71.23.172:8888/" target="_blank" rel="nofollow">Demo</a>]
 	<br>Yang Zhao*, Chunyuan Li*, Ping Yu, Jianfeng Gao, Changyou Chen (* Equal contribution)</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
