--- a/index.html
+++ b/index.html
@@ -573,14 +573,14 @@ My recent research focuses on exploring and practicing the connections between d
 <td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px">
 <font size="3" style="line-height:110%;background-color:transparent">I completed my PhD in machine learning at Duke University, advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font>
 <font size="3"><span style="line-height:19.2px">. My PhD research studied the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
---- enriching one with each other: (1) Bayesian Deep Learning: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) Deep Bayesian Learning: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning.
+--- enriching one with each other: (1) Bayesian Deep Learning: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) Deep Bayesian Learning: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision and natural language processing.
 </span></font>
 
 </td>
 </tr>
 <tr>
 <td style="width:19px;height:24px"></td><td style="width:967px;height:24px"><font size="3">
-<span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">chunyuan.li@hotmail.com</a><font size="3">]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]
+<span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:lichunyuan24@gmail.com" style="font-size:medium">lichunyuan24@gmail.com</a><font size="3">]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]
 <a href="https://dukespace.lib.duke.edu/dspace/handle/10161/18207" target="_blank" rel="nofollow">[Dissertation]</a> 
 </span>
 <center style="text-align:left;color:rgb(68,68,68);line-height:15px;font-family:Arial,Verdana,sans-serif"></center>
@@ -678,7 +678,7 @@ My recent research focuses on exploring and practicing the connections between d
 <td style="width:857px;height:40px"><span style="text-align:left;color:rgb(0,0,0)">
 	<br><br>
 	<font face="times new roman, serif" size="3">Optimus: Organizing Sentences via Pre-trained Modeling of a Latent Space
-	[<a href="http://chunyuan.li/papers/Optimus_2020.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://arxiv.org/abs/2004.04092" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/Optimus" target="_blank" rel="nofollow">Code</a>]
 	[<a href="http://40.71.23.172:8899/" target="_blank" rel="nofollow">Demo</a>]
 	<br>Chunyuan Li, Xiang Gao, Yuan Li, Xiujun Li, Baolin Peng, Yizhe Zhang, Jianfeng Gao</font><br>
@@ -709,6 +709,7 @@ My recent research focuses on exploring and practicing the connections between d
 	[<a href="https://github.com/YangNaruto/FQ-GAN" target="_blank" rel="nofollow">Code</a>]
 	[<a href="http://40.71.23.172:8888/" target="_blank" rel="nofollow">Demo</a>]
 	<br>Yang Zhao*, Chunyuan Li*, Ping Yu, Jianfeng Gao, Changyou Chen (* Equal contribution)</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Machine Learning (<b>ICML</b>)</i>, 2020.&nbsp;</span></font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	A simple plug-in to improve BigGAN, StyleGAN, and U-GAT-IT for large-scale image generation/translation
