--- a/index.html
+++ b/index.html
@@ -764,6 +764,8 @@ My recent research focuses on exploring and practicing the connections between d
 	[<a href="https://github.com/microsoft/Oscar" target="_blank" rel="nofollow">Code</a>]
 	[<a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="nofollow">Blog</a>]
 	<br>Xiujun Li, Xi Yin, Chunyuan Li, Pengchuan Zhang, Xiaowei Hu, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2020. <br></span></font>	
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	Objects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
 	<br><br>
@@ -773,6 +775,24 @@ My recent research focuses on exploring and practicing the connections between d
 </tbody>
 </table>
 
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Structure-Aware Human-Action Generation
+	[<a href="https://chunyuan.li/papers/ECCV_ping.pdf" target="_blank" rel="nofollow">Paper</a>]
+	<br>Ping Yu, Yang Zhao, Chunyuan Li, Junsong Yuan, Changyou Chen</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2020. <br></span></font>	
+	<br>
+</td>
+</tr>
+</tbody>
+</table>
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
