--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ My recent research focuses on exploring and practicing the connections between d
 </td>
 <td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Structure-Aware Human-Action Generation
-	[<a href="https://chunyuan.li/papers/ECCV_ping.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://arxiv.org/abs/2007.01971" target="_blank" rel="nofollow">Paper</a>]
 	<br>Ping Yu, Yang Zhao, Chunyuan Li, Junsong Yuan, Changyou Chen</font>
 	<br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
