--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">Towards Learning a Generic Agent for Vision-and-Language Navigation via Pre-training
 	[<a href="https://arxiv.org/abs/2002.10638" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/weituo12321/PREVALENT" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="nofollow">Blog</a>]	
 	<br>Weituo Hao*, Chunyuan Li*, Xiujun Li, Lawrence Carin, Jianfeng Gao (* Equal contribution)</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2020. <br></span></font>	
@@ -925,6 +926,7 @@ My recent research focuses on exploring and practicing the connections between d
 <td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Twin Auxiliary Classifiers GAN
 	[<a href="https://arxiv.org/abs/1907.02690" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/batmanlab/twin-auxiliary-classifiers-gan" target="_blank" rel="nofollow">Code</a>]
 	<br>Mingming Gong, Yanwu Xu, Chunyuan Li, Kun Zhang, Kayhan Batmanghelich</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>Neural Information Processing Systems (<b>NeurIPS</b>)</i>, 2019. &nbsp;
