--- a/index.html
+++ b/index.html
@@ -559,22 +559,30 @@ _.fk("gb_Qf");
 
 <td style="width:19px;height:70px"><br></td><td style="width:967px;height:70px"><font size="3"><span style="line-height:19.2px">
 I am a senior researcher at Microsoft Research, Redmond. 
-My recent research focuses on exploring and practicing the connections between deep generative models and self-supervised pre-training using large-scale datasets and training, with applications to natural language modeling, image generation and vision-and-language tasks. For an overview, please check the
-	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="nofollow">slides</a></font>
-	and blogs (in 
-	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="nofollow">English</a></font>
-	and 
-	<font size="3"><a href="https://zhuanlan.zhihu.com/p/122250953" target="_blank" rel="nofollow">Chinese</a></font>
-	). 
+My recent research focuses on large-scale pre-training in computer vision and natural language modeling. Some recent works include 
+(1) Deep generative models at scale 
+	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="nofollow">[Slides]</a></font>
+	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="nofollow">[Blog1]</a></font>
+	<font size="3"><a href="https://zhuanlan.zhihu.com/p/122250953" target="_blank" rel="nofollow">[Blog2]</a></font>
+	
+(2) vision-and-language pre-training 
+	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="nofollow">[Blog1]</a></font>
+	<font size="3"><a href="https://zhuanlan.zhihu.com/p/141089155" target="_blank" rel="nofollow">[Blog2]</a></font>
+
+(3) self-supervised visual reprensetation learning 	
+	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/hexa-self-supervised-pretraining-with-hard-examples-improves-visual-representations/" target="_blank" rel="nofollow">[Blog]</a></font>.
 </td>
 </tr>
 
 <tr>
-<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px">
+<td style="width:19px;height:40px"><br></td><td style="width:967px;height:40px">
 <font size="3" style="line-height:110%;background-color:transparent">I completed my PhD in machine learning at Duke University, advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font>
-<font size="3"><span style="line-height:19.2px">. My PhD research studied the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
---- enriching one with each other: (1) Bayesian Deep Learning: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) Deep Bayesian Learning: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision and natural language processing.
+<font size="3"><span style="line-height:19.2px">. My PhD research studied <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">probabilistic deep learning</a>.
 </span></font>
+
+<!-- 
+--- enriching one with each other: (1) Bayesian Deep Learning: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs. (2) Deep Bayesian Learning: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. These tools have been applied to various domains, including computer vision and natural language processing.
+--> 
 
 </td>
 </tr>
@@ -676,13 +684,15 @@ My recent research focuses on exploring and practicing the connections between d
 </td>
 
 <td style="width:857px;height:40px"><span style="text-align:left;color:rgb(0,0,0)">
-	<br><br>
+	<br>
 	<font face="times new roman, serif" size="3">Optimus: Organizing Sentences via Pre-trained Modeling of a Latent Space
 	[<a href="https://arxiv.org/abs/2004.04092" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/Optimus" target="_blank" rel="nofollow">Code</a>]
 	[<a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="nofollow">Blog</a>]	
 	[<a href="http://40.71.23.172:8899/" target="_blank" rel="nofollow">Demo</a>]
 	<br>Chunyuan Li, Xiang Gao, Yuan Li, Xiujun Li, Baolin Peng, Yizhe Zhang, Jianfeng Gao</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br></span></font>		
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	The first BIG VAE language model, as an illustration of pre-training a compact latent space at scale
@@ -785,6 +795,7 @@ My recent research focuses on exploring and practicing the connections between d
 <td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Structure-Aware Human-Action Generation
 	[<a href="https://arxiv.org/abs/2007.01971" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/PingYu-iris/SA-GCN" target="_blank" rel="nofollow">Code</a>]
 	<br>Ping Yu, Yang Zhao, Chunyuan Li, Junsong Yuan, Changyou Chen</font>
 	<br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
@@ -794,6 +805,67 @@ My recent research focuses on exploring and practicing the connections between d
 </tr>
 </tbody>
 </table>
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Pointer: Constrained Text Generation via Insertion-based Generative Pre-training
+	[<a href="https://arxiv.org/abs/2005.00558" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/dreasysnail/POINTER" target="_blank" rel="nofollow">Code</a>]
+	[<a href="http://52.247.25.3:8900/" target="_blank" rel="nofollow">Demo</a>]
+	<br>Yizhe Zhang, Guoyin Wang, Chunyuan Li, Zhe Gan, Chris Brockett, Bill Dolan</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br></span></font>	
+	<br>
+</td>
+</tr>
+</tbody>
+</table>
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Improving Text Generation with Student-Forcing Optimal Transport
+	[<a href="https://arxiv.org/abs/2010.05994" target="_blank" rel="nofollow">Paper</a>]
+	<br>Guoyin Wang*, Chunyuan Li*, Jianqiao Li*  et al</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br></span></font>	
+	<br>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Repulsive Attention: Rethinking Multi-head Attention as Bayesian Inference
+	[<a href="https://arxiv.org/abs/2009.09364" target="_blank" rel="nofollow">Paper</a>]
+	<br>Bang An, Jie Lyu, Zhenyi Wang, Chunyuan Li, Changwei Hu, Fei Tan, Ruiyi Zhang, Yifan Hu, Changyou Chen</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br></span></font>	
+	<br>
+</td>
+</tr>
+</tbody>
+</table>
+
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
@@ -811,7 +883,10 @@ My recent research focuses on exploring and practicing the connections between d
 	[<a href="http://52.137.109.64:8890/" target="_blank" rel="nofollow">Project</a>]
 	[<a href="https://aka.ms/scgpt" target="_blank" rel="nofollow">Demo</a>]
 	<br>Baolin Peng, Chenguang Zhu, Chunyuan Li, Xiujun Li, Jinchao Li, Michael Zeng, Jianfeng Gao</font>
-	<br> <br>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br>&nbsp; </span></font>
+	<br>
 </td>
 </tr>
 </tbody>
@@ -829,6 +904,8 @@ My recent research focuses on exploring and practicing the connections between d
 	[<a href="http://soloist.westus2.azurecontainer.io/" target="_blank" rel="nofollow">Project</a>]
 	<br>Baolin Peng, Chunyuan Li, Jinchao Li, Shahin Shayandeh, Lars Liden, Jianfeng Gao</font>
 	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Transactions of the Association for Computational Linguistics (<b>T-ACL</b>)</i>, 2020. <br>&nbsp; </span></font>	
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	A new and simplified paradigm shift for task-oritend dialogs: grounded pre-training + few-shot fine-tuning  
 	<br><br>
@@ -838,6 +915,26 @@ My recent research focuses on exploring and practicing the connections between d
 </tbody>
 </table>
 
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Weakly Supervised Cross-domain Alignment with Optimal Transport
+	[<a href="https://arxiv.org/abs/2008.06597" target="_blank" rel="nofollow">Paper</a>]
+	<br>S. Yuan, K. Bai, L. Chen, Y. Zhang, C. Tao, C. Li, G. Wang, R. Henao, L. Carin</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i> British Machine Vision Conference (<b>BMVC</b>)</i>, 2020. &nbsp;
+	<font color="#ff9900" face="times new roman, serif" size="3">Oral Presentation</font> <br></span></font>	
+	<br>
+</td>
+</tr>
+</tbody>
+</table>
 
 
 
