--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ My recent research focuses on large-scale pre-training in computer vision and na
 	<font size="3"><a href="https://zhuanlan.zhihu.com/p/141089155" target="_blank" rel="nofollow">[Blog2]</a></font>
 
 (3) self-supervised visual reprensetation learning 	
-	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/hexa-self-supervised-pretraining-with-hard-examples-improves-visual-representations/" target="_blank" rel="nofollow">[Blog]</a></font>.
+	<font size="3"><a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="nofollow">[Paper]</a></font>.
 </td>
 </tr>
 
@@ -679,6 +679,33 @@ My recent research focuses on large-scale pre-training in computer vision and na
 <td style="width:25px;height:60px">&nbsp;</td>
 <td style="width:225px;height:70px">
 <div style="display:block;text-align:left"><br></div>
+<img border="0" height="65" src="./logo/esvit.png" width="200"></div>
+</div>
+</td>
+
+<td style="width:857px;height:40px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Efficient Self-supervised Vision Transformers for Representation Learning
+	[<a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="nofollow">Paper</a>]
+	<br>Chunyuan Li, Jianwei Yang, Pengchuan Zhang, Mei Gao, Bin Xiao, Xiyang Dai, Lu Yuan, Jianfeng Gao</font><br>		
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	81.3% ImageNet linear probe accuracy, outperforming prior SoTA with 10x higher throughput 
+	<br>
+	</font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td style="width:225px;height:70px">
+<div style="display:block;text-align:left"><br></div>
 <img border="0" height="75" src="./logo/headfig_optimus.png" width="200"></div>
 </div>
 </td>
@@ -695,9 +722,68 @@ My recent research focuses on large-scale pre-training in computer vision and na
 	<i>Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2020. <br></span></font>		
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	The first BIG VAE language model, as an illustration of pre-training a compact latent space at scale
+	The first big VAE language model, as an illustration of pre-training a compact latent space at scale
 	<br>
 	</font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+
+
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:40px">&nbsp;</td>
+<td style="width:225px;height:40px">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="60" src="./logo/Oscar_scheme.png" width="190"></div>
+</div>
+</td>
+<td style="width:710px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Oscar: Object-Semantics Aligned Pre-training for Vision-Language Tasks
+	[<a href="https://arxiv.org/abs/2004.06165" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/microsoft/Oscar" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="nofollow">Blog</a>]
+	<br>Xiujun Li, Xi Yin, Chunyuan Li, Pengchuan Zhang, Xiaowei Hu, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2020. <br></span></font>	
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	Objects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
+	<br>
+	</font>				
+</td>
+</tr>
+</tbody>
+</table>
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:75">&nbsp;</td>
+<td style="width:225px;height:75">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="70" src="./logo/soloist.png" width="200"></div>
+</div>
+</td>
+<td style="width:857px;height:75px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Soloist: Few-shot Task-Oriented Dialog with A Single Pre-trained Auto-regressive Model
+	[<a href="https://arxiv.org/abs/2005.05298" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="http://soloist.westus2.azurecontainer.io/" target="_blank" rel="nofollow">Project</a>]
+	<br>Baolin Peng, Chunyuan Li, Jinchao Li, Shahin Shayandeh, Lars Liden, Jianfeng Gao</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Transactions of the Association for Computational Linguistics (<b>T-ACL</b>)</i>, 2020. <br>&nbsp; </span></font>	
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	A unified framework for end-to-end task-oritend dialogs: grounded pre-training + few-shot fine-tuning  
+	<br>
+	</font>	
 </td>
 </tr>
 </tbody>
@@ -759,32 +845,6 @@ My recent research focuses on large-scale pre-training in computer vision and na
 </tbody>
 </table>
 
-<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
-<tbody>
-<tr>
-<td style="width:25px;height:40px">&nbsp;</td>
-<td style="width:215px;height:40px">
-<div style="display:block;text-align:left"><br></div>
-<img border="0" height="50" src="./logo/Oscar_scheme.png" width="190"></div>
-</div>
-</td>
-<td style="width:710px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
-	<br>
-	<font face="times new roman, serif" size="3">Oscar: Object-Semantics Aligned Pre-training for Vision-Language Tasks
-	[<a href="https://arxiv.org/abs/2004.06165" target="_blank" rel="nofollow">Paper</a>]
-	[<a href="https://github.com/microsoft/Oscar" target="_blank" rel="nofollow">Code</a>]
-	[<a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="nofollow">Blog</a>]
-	<br>Xiujun Li, Xi Yin, Chunyuan Li, Pengchuan Zhang, Xiaowei Hu, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
-	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
-	<i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2020. <br></span></font>	
-	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	Objects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
-	<br><br>
-	</font>				
-</td>
-</tr>
-</tbody>
-</table>
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
@@ -792,6 +852,7 @@ My recent research focuses on large-scale pre-training in computer vision and na
 <td style="width:25px;height:50px">&nbsp;</td>
 <td style="width:225px;height:50px">
 </td>
+<br>
 <td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Structure-Aware Human-Action Generation
 	[<a href="https://arxiv.org/abs/2007.01971" target="_blank" rel="nofollow">Paper</a>]
@@ -871,10 +932,8 @@ My recent research focuses on large-scale pre-training in computer vision and na
 <tbody>
 <tr>
 <td style="width:25px;height:50px">&nbsp;</td>
-<td style="width:215px;height:50px">
-<div style="display:block;text-align:left"></div>
-<img border="0" height="50" src="./logo/dialog_architecture.png" width="180"></div>
-</div>
+<td style="width:225px;height:50px">
+
 </td>
 <td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Few-shot Natural Language Generation for Task-Oriented Dialog
@@ -892,28 +951,6 @@ My recent research focuses on large-scale pre-training in computer vision and na
 </tbody>
 </table>
 
-<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
-<tbody>
-<tr>
-<td style="width:25px;height:50px">&nbsp;</td>
-<td style="width:225px;height:50px">
-</td>
-<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
-	<font face="times new roman, serif" size="3">Soloist: Few-shot Task-Oriented Dialog with A Single Pre-trained Auto-regressive Model
-	[<a href="https://arxiv.org/abs/2005.05298" target="_blank" rel="nofollow">Paper</a>]
-	[<a href="http://soloist.westus2.azurecontainer.io/" target="_blank" rel="nofollow">Project</a>]
-	<br>Baolin Peng, Chunyuan Li, Jinchao Li, Shahin Shayandeh, Lars Liden, Jianfeng Gao</font>
-	<br>
-	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
-	<i>Transactions of the Association for Computational Linguistics (<b>T-ACL</b>)</i>, 2020. <br>&nbsp; </span></font>	
-	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	A new and simplified paradigm shift for task-oritend dialogs: grounded pre-training + few-shot fine-tuning  
-	<br><br>
-	</font>	
-</td>
-</tr>
-</tbody>
-</table>
 
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
